@@ -253,7 +253,7 @@ def __others(main_view):
     about.connect('activate', lambda *w: show_about_dialog())
     
     changelog = gtk.MenuItem( _('Read changelog') )
-    changelog.connect('activate', lambda *w: show_changelog())
+    changelog.connect('activate', lambda *w: show_text_window('Ailurus changelog','/usr/share/ailurus/ChangeLog'))
     
     return [ changelog, help_contribute, help_blog, help_update, help_report_bug, help_translate, special_thank, about ] 
 
