@@ -180,8 +180,8 @@ class FedoraFastestMirrorPane(gtk.VBox):
             _('If some repositories are not listed above, please click here to tell Ailurus developers.') )
         contact_maintainer.connect('activate', lambda w: report_bug() )
         
-        copy_repos = image_stock_menuitem(gtk.STOCK_FIND, _('Copy the selected repositories'))
-        copy_repos.connect('activate', self.__callback__copy_selected_repos())
+        copy_repos = image_stock_menuitem(gtk.STOCK_COPY, _('Copy the selected repository urls'))
+        copy_repos.connect('activate', self.__callback__copy_selected_repos, treeview)
         
         popupmenu = gtk.Menu()
         popupmenu.append(use_selected)
@@ -196,10 +196,20 @@ class FedoraFastestMirrorPane(gtk.VBox):
 
     def __callback__copy_selected_repos(self, w, treeview):
         selection = treeview.get_selection()
+        model, pathlist = selection.get_selected_rows()
+        if pathlist == None or len(pathlist)==0: # select nothing
+            return
         
-        
-        
-        
+        urls = ''
+        for path in pathlist:
+            iter = model.get_iter(path)
+            url = model.get_value(iter, self.URL)
+            url += '\n'
+            urls += url     
+            
+        clipboard = gtk.clipboard_get()
+        clipboard.set_text(urls)
+               
     def __callback__detect_selected_repos_speed(self, w, treeview):
         selection = treeview.get_selection()
         model, pathlist = selection.get_selected_rows()
