@@ -110,4 +110,12 @@ apt-cache show PACKAGE_NAME
 
 """),
 
+_("""Change Process priority
+sudo renice NEW_PRIORITY `pgrep NAME_OF_PROCESS`
+example:  sudo renice 5 `pgrep firefox`       # decrease CPU Priority from 0 to 5 
+          sudo renice -5 `pgrep wine-server`  #increase CPU Priority from 0 to -5       
+               high <------------------> low
+NEW_PRIORITY = -19, -18, -17 [...] 18, 19, 20
+"""),
+
 ]
